Add customizable document field names for Elasticsearch9 and OpenSearch providers