@@ -13,6 +13,7 @@
  */
 package net.javacrumbs.shedlock.provider.elasticsearch9;
 
+import static java.util.Objects.requireNonNull;
 import static net.javacrumbs.shedlock.core.ClockProvider.now;
 import static net.javacrumbs.shedlock.support.Utils.getHostname;
 
@@ -25,7 +26,6 @@ import co.elastic.clients.elasticsearch.core.UpdateResponse;
 import co.elastic.clients.json.JsonData;
 import java.io.IOException;
 import java.time.Instant;
-import java.util.Collections;
 import java.util.Map;
 import java.util.Optional;
 import net.javacrumbs.shedlock.core.AbstractSimpleLock;
@@ -35,7 +35,9 @@ import net.javacrumbs.shedlock.core.SimpleLock;
 import net.javacrumbs.shedlock.support.LockException;
 
 /**
- * It uses a collection that contains documents like this:
+ * Elasticsearch-based lock provider.
+ *
+ * <p>It uses a collection that contains documents like this:
  *
  * <pre>
  * {
@@ -66,31 +68,45 @@ import net.javacrumbs.shedlock.support.LockException;
  * update failed (0 updated documents) somebody else holds the lock
  * <li>When unlocking, lock_until is set to now.
  * </ol>
+ *
+ * <p>Example with custom field names for SNAKE_CASE JsonpMapper:
+ * <pre>
+ * ElasticsearchLockProvider provider = new ElasticsearchLockProvider(
+ *     ElasticsearchLockProvider.Configuration.builder()
+ *         .withClient(client)
+ *         .withFieldNames(DocumentFieldNames.SNAKE_CASE)
+ *         .build()
+ * );
+ * </pre>
  */
 public class ElasticsearchLockProvider implements LockProvider {
     static final String SCHEDLOCK_DEFAULT_INDEX = "shedlock";
-    static final String LOCK_UNTIL = "lockUntil";
-    static final String LOCKED_AT = "lockedAt";
-    static final String LOCKED_BY = "lockedBy";
-    static final String NAME = "name";
-
-    private static final String UPDATE_SCRIPT = "if (ctx._source." + LOCK_UNTIL + " <= " + "params." + LOCKED_AT
-            + ") { " + "ctx._source." + LOCKED_BY + " = params." + LOCKED_BY + "; " + "ctx._source." + LOCKED_AT
-            + " = params." + LOCKED_AT + "; " + "ctx._source." + LOCK_UNTIL + " =  params." + LOCK_UNTIL + "; "
-            + "} else { " + "ctx.op = 'none' " + "}";
+    private static final String UNLOCK_TIME = "unlockTime";
 
     private final ElasticsearchClient client;
     private final String hostname;
     private final String index;
+    private final DocumentFieldNames fieldNames;
 
-    private ElasticsearchLockProvider(ElasticsearchClient client, String index) {
-        this.client = client;
+    /**
+     * Creates a new ElasticsearchLockProvider with the specified configuration.
+     *
+     * @param configuration the configuration containing client, index, and field names
+     */
+    public ElasticsearchLockProvider(Configuration configuration) {
+        this.client = requireNonNull(configuration.getClient(), "client cannot be null");
+        this.index = requireNonNull(configuration.getIndex(), "index cannot be null");
+        this.fieldNames = requireNonNull(configuration.getFieldNames(), "fieldNames cannot be null");
         this.hostname = getHostname();
-        this.index = index;
     }
 
+    /**
+     * Creates a new ElasticsearchLockProvider with default configuration.
+     *
+     * @param client the Elasticsearch client
+     */
     public ElasticsearchLockProvider(ElasticsearchClient client) {
-        this(client, SCHEDLOCK_DEFAULT_INDEX);
+        this(Configuration.builder().withClient(client).build());
     }
 
     @Override
@@ -98,23 +114,22 @@ public class ElasticsearchLockProvider implements LockProvider {
         try {
             Instant now = now();
             Instant lockAtMostUntil = lockConfiguration.getLockAtMostUntil();
-            Map<String, JsonData> lockObject = lockObject(lockConfiguration.getName(), lockAtMostUntil, now);
+            Map<String, JsonData> lockParams = createLockParams(lockConfiguration.getName(), lockAtMostUntil, now);
+            Map<String, Object> upsertDoc = createUpsertDocument(lockConfiguration.getName(), lockAtMostUntil, now);
 
-            // The object exist only to have some type we can work with
-            Lock pojo = new Lock(lockConfiguration.getName(), hostname, now, lockAtMostUntil);
+            UpdateRequest<Map<String, Object>, Map<String, Object>> updateRequest =
+                    UpdateRequest.of(ur -> ur.index(index)
+                            .id(lockConfiguration.getName())
+                            .refresh(Refresh.True)
+                            .script(sc -> sc.lang("painless")
+                                    .source(builder -> builder.scriptString(buildUpdateScript()))
+                                    .params(lockParams))
+                            .upsert(upsertDoc));
 
-            UpdateRequest<Lock, Lock> updateRequest = UpdateRequest.of(ur -> ur.index(index)
-                    .id(lockConfiguration.getName())
-                    .refresh(Refresh.True)
-                    .script(sc -> sc.lang("painless")
-                            .source(builder -> builder.scriptString(UPDATE_SCRIPT))
-                            .params(lockObject))
-                    .upsert(pojo));
-
-            UpdateResponse<Lock> res = client.update(updateRequest, Lock.class);
+            UpdateResponse<Map<String, Object>> res = client.update(updateRequest, Map.class);
             if (res.result() != Result.NoOp) {
                 return Optional.of(new ElasticsearchSimpleLock(lockConfiguration));
-            } else { // nothing happened
+            } else {
                 return Optional.empty();
             }
         } catch (IOException | ElasticsearchException e) {
@@ -126,16 +141,48 @@ public class ElasticsearchLockProvider implements LockProvider {
         }
     }
 
-    private Map<String, JsonData> lockObject(String name, Instant lockUntil, Instant lockedAt) {
+    private String buildUpdateScript() {
+        return """
+                if (ctx._source.%s <= params.%s) {
+                    ctx._source.%s = params.%s;
+                    ctx._source.%s = params.%s;
+                    ctx._source.%s = params.%s;
+                } else {
+                    ctx.op = 'none'
+                }"""
+                .formatted(
+                        fieldNames.lockUntil(),
+                        fieldNames.lockedAt(),
+                        fieldNames.lockedBy(),
+                        fieldNames.lockedBy(),
+                        fieldNames.lockedAt(),
+                        fieldNames.lockedAt(),
+                        fieldNames.lockUntil(),
+                        fieldNames.lockUntil());
+    }
+
+    private Map<String, JsonData> createLockParams(String name, Instant lockUntil, Instant lockedAt) {
         return Map.of(
-                NAME,
+                fieldNames.name(),
                 JsonData.of(name),
-                LOCKED_BY,
+                fieldNames.lockedBy(),
                 JsonData.of(hostname),
-                LOCKED_AT,
+                fieldNames.lockedAt(),
                 JsonData.of(lockedAt.toEpochMilli()),
-                LOCK_UNTIL,
+                fieldNames.lockUntil(),
                 JsonData.of(lockUntil.toEpochMilli()));
+    }
+
+    private Map<String, Object> createUpsertDocument(String name, Instant lockUntil, Instant lockedAt) {
+        return Map.of(
+                fieldNames.name(),
+                name,
+                fieldNames.lockedBy(),
+                hostname,
+                fieldNames.lockedAt(),
+                lockedAt.toEpochMilli(),
+                fieldNames.lockUntil(),
+                lockUntil.toEpochMilli());
     }
 
     private final class ElasticsearchSimpleLock extends AbstractSimpleLock {
@@ -146,28 +193,110 @@ public class ElasticsearchLockProvider implements LockProvider {
 
         @Override
         public void doUnlock() {
-            // Set lockUtil to now or lockAtLeastUntil whichever is later
             try {
-                Map<String, JsonData> lockObject = Collections.singletonMap(
-                        "unlockTime",
+                Map<String, JsonData> unlockParams = Map.of(
+                        UNLOCK_TIME,
                         JsonData.of(lockConfiguration.getUnlockTime().toEpochMilli()));
 
-                UpdateRequest<Lock, Lock> updateRequest = UpdateRequest.of(ur -> ur.index(index)
-                        .id(lockConfiguration.getName())
-                        .refresh(Refresh.True)
-                        .script(sc -> sc.lang("painless")
-                                .source(builder -> builder.scriptString("ctx._source.lockUntil = params.unlockTime"))
-                                .params(lockObject)));
-                client.update(updateRequest, Lock.class);
+                String unlockScript = "ctx._source." + fieldNames.lockUntil() + " = params." + UNLOCK_TIME;
+
+                UpdateRequest<Map<String, Object>, Map<String, Object>> updateRequest =
+                        UpdateRequest.of(ur -> ur.index(index)
+                                .id(lockConfiguration.getName())
+                                .refresh(Refresh.True)
+                                .script(sc -> sc.lang("painless")
+                                        .source(builder -> builder.scriptString(unlockScript))
+                                        .params(unlockParams)));
+                client.update(updateRequest, Map.class);
             } catch (IOException | ElasticsearchException e) {
                 throw new LockException("Unexpected exception occurred", e);
             }
         }
     }
 
-    private record Lock(String name, String lockedBy, long lockedAt, long lockUntil) {
-        Lock(String name, String lockedBy, Instant lockedAt, Instant lockUntil) {
-            this(name, lockedBy, lockedAt.toEpochMilli(), lockUntil.toEpochMilli());
+    /**
+     * Configuration for ElasticsearchLockProvider.
+     */
+    public static final class Configuration {
+        private final ElasticsearchClient client;
+        private final String index;
+        private final DocumentFieldNames fieldNames;
+
+        Configuration(ElasticsearchClient client, String index, DocumentFieldNames fieldNames) {
+            this.client = requireNonNull(client, "client cannot be null");
+            this.index = requireNonNull(index, "index cannot be null");
+            this.fieldNames = requireNonNull(fieldNames, "fieldNames cannot be null");
+        }
+
+        public ElasticsearchClient getClient() {
+            return client;
+        }
+
+        public String getIndex() {
+            return index;
+        }
+
+        public DocumentFieldNames getFieldNames() {
+            return fieldNames;
+        }
+
+        public static Builder builder() {
+            return new Builder();
+        }
+
+        /**
+         * Builder for ElasticsearchLockProvider.Configuration.
+         */
+        public static final class Builder {
+            private ElasticsearchClient client;
+            private String index = SCHEDLOCK_DEFAULT_INDEX;
+            private DocumentFieldNames fieldNames = DocumentFieldNames.DEFAULT;
+
+            /**
+             * Sets the Elasticsearch client (required).
+             *
+             * @param client the Elasticsearch client
+             * @return this builder
+             */
+            public Builder withClient(ElasticsearchClient client) {
+                this.client = client;
+                return this;
+            }
+
+            /**
+             * Sets the index name. Defaults to "shedlock".
+             *
+             * @param index the index name
+             * @return this builder
+             */
+            public Builder withIndex(String index) {
+                this.index = index;
+                return this;
+            }
+
+            /**
+             * Sets the document field names. Defaults to {@link DocumentFieldNames#DEFAULT}.
+             *
+             * <p>Use {@link DocumentFieldNames#SNAKE_CASE} when your ElasticsearchClient
+             * is configured with a JsonpMapper using SNAKE_CASE naming strategy.
+             *
+             * @param fieldNames the field names configuration
+             * @return this builder
+             */
+            public Builder withFieldNames(DocumentFieldNames fieldNames) {
+                this.fieldNames = fieldNames;
+                return this;
+            }
+
+            /**
+             * Builds the Configuration.
+             *
+             * @return the configuration
+             * @throws NullPointerException if client is not set
+             */
+            public Configuration build() {
+                return new Configuration(requireNonNull(client, "client is required"), index, fieldNames);
+            }
         }
     }
 }
